# genppt

./: .gitignore  CODEX.md  README.md  generate_content.py  generate_ppt.py  genppt.mcp.example.json  genppt.py  profile_template.py  prompts.md  pyproject.toml
skills/genppt-presentation/: SKILL.md
src/genppt/: __init__.py  design_principles.py  graph.py  llm.py  models.py  orchestrator.py  pptx_lxml_effects.py  render_artifact.py  renderer.py  server.py  state.py  stream.py  style.py  template_profile.py  trace.py
src/genppt/agents/: __init__.py  chart.py  content.py  design.py  director.py  review.py  theme.py
src/genppt/prompts/: __init__.py  loader.py
src/genppt/static/: app.js  index.html  style.css
src/genppt/tools/: __init__.py  image_gen.py  json_utils.py  schema_validator.py  scorers.py  validators.py  visual_review.py  web_image.py
tests/: test_agents.py  test_llm_config.py  test_orchestrator.py
