[project]
name = "genppt"
version = "0.2.0"
description = "AI-driven PPT generation with LangGraph ReAct agents."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "python-pptx>=1.0.2",
    "lxml>=5.0",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
